# tau

./: .gitignore  Cargo.toml  LICENSE  PLUGINS.md  README.md  TODO.md  justfile  release-plz.toml
.github/workflows/: release-plz.yml
.tau/: checklist.toml  dispatch-context.md  instructions.toml
crates/tau/: Cargo.toml
crates/tau-agent/: Cargo.toml  README.md
crates/tau-agent-base/: Cargo.toml  README.md
crates/tau-agent-base/src/: config_chain.rs  lib.rs  paths.rs  plugin_protocol.rs  plugin_service.rs  project.rs  protocol.rs  subscription_usage.rs  tool_prompt.rs  types.rs  usage_totals.rs
crates/tau-agent-cli/: Cargo.toml
crates/tau-agent-cli/src/: completer.rs  main.rs
crates/tau-agent-client/: Cargo.toml  README.md
crates/tau-agent-client/src/: lib.rs
crates/tau-agent-engine/: Cargo.toml  README.md
crates/tau-agent-engine/src/: agent.rs  compaction.rs  lib.rs  provider.rs  system_prompt.rs  throttle.rs
crates/tau-agent-engine/src/providers/: anthropic.rs  anthropic_types.rs  common.rs  log.rs  mock.rs  openai.rs  openai_types.rs
crates/tau-agent-lib/: Cargo.toml  README.md
crates/tau-agent-lib/examples/: shutdown_harness.rs
crates/tau-agent-lib/src/: auth.rs  config.rs  db.rs  lib.rs  logging.rs  plugin.rs  profile.rs  replay.rs  shutdown.rs  worker.rs
crates/tau-agent-lib/src/server/: agent_runner.rs  bg_tasks.rs  chat_attachments.rs  dispatch.rs  mod.rs  notifications.rs  post_idle.rs  registry.rs  state.rs  task_handlers.rs  tool_dispatch.rs
crates/tau-agent-lib/src/server/bg_jobs/: gc_empty_sessions.rs  mod.rs  refresh_subscription_usage.rs
crates/tau-agent-lib/tests/: e2e_config_reload.rs  e2e_info_messages.rs  e2e_orchestration.rs  e2e_server.rs  e2e_task_lifecycle.rs  e2e_tool_cancel.rs  plugin_test.rs  shutdown_kills_bash.rs
crates/tau-agent-lib/tests/common/: mod.rs
crates/tau-agent-plugin/: Cargo.toml  README.md
crates/tau-agent-plugin-tasks/: Cargo.toml  README.md
crates/tau-agent-plugin-tasks/src/: err.rs  lib.rs  tasks.rs  tasks_affected_files.rs  tasks_config.rs  tasks_db.rs  tasks_git.rs  tasks_merge.rs  tasks_merge_worker.rs  tasks_notify.rs  tasks_scheduler.rs  tasks_session.rs  tasks_state.rs
crates/tau-agent-plugin-worker/: Cargo.toml  README.md
crates/tau-agent-plugin-worker/src/: lib.rs  orchestration.rs
crates/tau-agent-plugin-worker/src/tools/: bash.rs  diagnostics_scan.rs  edit.rs  get_function.rs  line_hash.rs  mod.rs  read.rs  skeleton.rs  tree_sitter_support.rs  write.rs
crates/tau-agent-plugin/src/: executor.rs  lib.rs  tunnel.rs
crates/tau-agent-server/: Cargo.toml
crates/tau-agent-server/src/: lib.rs
crates/tau-agent-tui/: Cargo.toml  README.md
crates/tau-agent-tui/src/: app.rs  events.rs  lib.rs  markdown.rs  message.rs  render.rs  settings.rs  theme.rs  ui.rs
crates/tau-agent-tui/themes/: dark.json
crates/tau-agent/examples/: shutdown_harness.rs
crates/tau-agent/src/: agent.rs  client.rs  compaction.rs  completer.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  migration.rs  model_resolve.rs  models_config.rs  orchestration.rs  paths.rs  plugin.rs  project_config.rs  protocol.rs  provider.rs  replay.rs  server.rs  shutdown.rs  system_prompt.rs  tasks.rs  tasks_config.rs  tasks_db.rs  tasks_git.rs  tasks_merge.rs  tasks_scheduler.rs  throttle.rs  types.rs  worker.rs
crates/tau-agent/src/providers/: anthropic.rs  common.rs  log.rs  mock.rs  mod.rs
crates/tau-agent/src/server/: agent_runner.rs  dispatch.rs  mod.rs  notifications.rs  post_idle.rs  registry.rs  state.rs  task_handlers.rs  tool_dispatch.rs
crates/tau-agent/src/tools/: bash.rs  mod.rs  write.rs
crates/tau-agent/tests/: e2e_info_messages.rs  e2e_orchestration.rs  e2e_server.rs  e2e_task_lifecycle.rs  e2e_tool_cancel.rs  plugin_test.rs
crates/tau-agent/tests/common/: mod.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: completer.rs  main.rs
crates/tau-tui/: Cargo.toml
crates/tau-tui/src/: app.rs  events.rs  lib.rs  message.rs  render.rs  settings.rs  theme.rs  ui.rs
crates/tau/src/: agent.rs  auth.rs  client.rs  compaction.rs  config.rs  db.rs  lib.rs  orchestration.rs  plugin.rs  protocol.rs  provider.rs  replay.rs  server.rs  system_prompt.rs  tasks.rs  tasks_config.rs  tasks_db.rs  tasks_git.rs  tasks_merge.rs  tasks_scheduler.rs  throttle.rs  types.rs  worker.rs  worker2.rs
crates/tau/src/providers/: anthropic.rs  anthropic_types.rs  mock.rs  mod.rs  openai.rs  openai_types.rs
crates/tau/src/tools/: bash.rs  edit.rs  mod.rs  read.rs  write.rs
crates/tau/tests/: e2e_orchestration.rs  e2e_server.rs  e2e_task_lifecycle.rs  plugin_test.rs
crates/tau/tests/common/: mod.rs
docs/: CONFIG.md  PLUGINS.md  investigation-scheduler-event-loss.md
tests/: test_plugin.py
themes/: dark.json  light.json
