[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]

[workspace.dependencies]
tau = { path = "crates/tau" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive"] }
