[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
repository = "https://github.com/tau-agent/tau"
homepage = "https://github.com/tau-agent/tau"
keywords = ["llm", "agent", "ai", "claude", "chat"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
tau-agent = { path = "crates/tau-agent", version = "0.1.0" }
tau-agent-base = { path = "crates/tau-agent-base", version = "0.1.0" }
tau-agent-client = { path = "crates/tau-agent-client", version = "0.1.0" }
tau-agent-engine = { path = "crates/tau-agent-engine", version = "0.1.0" }
tau-agent-plugin = { path = "crates/tau-agent-plugin", version = "0.1.0" }
tau-agent-plugin-tasks = { path = "crates/tau-agent-plugin-tasks", version = "0.1.0" }
tau-agent-plugin-worker = { path = "crates/tau-agent-plugin-worker", version = "0.1.0" }
tau-agent-server = { path = "crates/tau-agent-server", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
ureq = { version = "3", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
rustyline = "17"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.11"
toml = "1.1"
base64 = "0.22"
rand = "0.10"
fs2 = "0.4"
nix = { version = "0.30", features = ["signal", "process"] }
tau-agent-tui = { path = "crates/tau-agent-tui", version = "0.1.0" }

[profile.release]
lto = true
