[package]
name = "tau-agent-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared types, wire protocol, and utilities for the tau agent workspace"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
