[package]
name = "tau-agent-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared types, wire protocol, and utilities for the tau agent workspace"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
toml.workspace = true
myelin.workspace = true

[features]
# `serde` is unconditionally pulled in as a hard dep above; the feature flag
# exists solely so `myelin::service`-emitted `cfg_attr(feature = "serde", …)`
# derives fire on the macro-generated request/response enums. Always on.
default = ["serde"]
serde = []

[dev-dependencies]
tempfile = "3"
smol.workspace = true
futures-lite = "2"
