[package]
name = "tau-agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM agent CLI"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau-agent.workspace = true
tau-agent-tui.workspace = true
smol.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
rustyline.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
