[package]
name = "tau-agent-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unix-socket client library for connecting to the tau agent server"
readme = "README.md"

[dependencies]
tau-agent-base.workspace = true
smol.workspace = true
futures.workspace = true
serde_json.workspace = true
