[package]
name = "tau-agent-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core agent loop and LLM providers for the tau agent"

[dependencies]
tau-agent-base.workspace = true
tau-agent-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
async-trait.workspace = true
futures.workspace = true
ureq.workspace = true
sha2.workspace = true
base64.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tau-agent-plugin-worker.workspace = true
