[package]
name = "tau-agent-plugin-tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Task system plugin for the tau agent — manages tasks, scheduling, and merge queue"
readme = "README.md"

[dependencies]
tau-agent-base.workspace = true
tau-agent-plugin.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
