[package]
name = "tau-agent-plugin-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Default worker plugin for the tau agent — provides bash/edit/read/write tools"

[dependencies]
tau-agent-base.workspace = true
tau-agent-plugin.workspace = true
async-trait.workspace = true
smol.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
nix.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
