[package]
name = "tau-agent-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Plugin SDK for the tau agent — everything a plugin author needs in one crate"
readme = "README.md"

[dependencies]
tau-agent-base.workspace = true
async-trait.workspace = true
smol.workspace = true
serde_json.workspace = true
