[package]
name = "tau-agent-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unix-socket daemon, session storage, plugin host, and authentication for the tau agent"

# Placeholder crate — dependencies will be added as server modules move here.
# See task #423 follow-up work.
[dependencies]
