[package]
name = "tau-agent-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Ratatui-based terminal UI for the tau LLM agent"
readme = "README.md"

[dependencies]
tau-agent-lib.workspace = true
smol.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
futures.workspace = true
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
ratatui-textarea = "0.8"
unicode-width = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix.workspace = true

[dev-dependencies]
tempfile = "3"
