[package]
name = "tau-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Library for building Claude/OpenAI/etc. agents with tools, sessions, and a plugin system"

[dependencies]
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
ureq.workspace = true
rusqlite.workspace = true
toml.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
fs2.workspace = true
chrono.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile = "3"
