[package]
name = "tau-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for the tau LLM agent (binary: tau)"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau-agent-lib.workspace = true
tau-agent-tui.workspace = true
smol.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
rustyline.workspace = true
serde_json.workspace = true
toml.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix.workspace = true
