[package]
name = "tau-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM agent CLI"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau.workspace = true
smol.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
rustyline.workspace = true
