[package]
name = "tau-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal UI for tau"

[dependencies]
tau.workspace = true
smol.workspace = true
serde_json.workspace = true
futures.workspace = true
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
