[package]
name = "tau-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal UI for tau"

[dependencies]
tau.workspace = true
smol.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
futures.workspace = true
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
ratatui-textarea = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
