[package]
name = "tau"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM agent library"

[dependencies]
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
ureq.workspace = true
rusqlite.workspace = true
toml.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
fs2.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
